E-Memwatch.c

Using atexit(Epplet_cleanup) prevents all those "mulitple spawning on
startup problems" people get.

-------------------------------------------------------------------------------

Fri Nov 12 13:02:56 EST 1999
(StriderZ)

Changed some stuff in E-Exec (thanks Ian), to make it safer and fun for all ages. Also hopefully
fixed a potential bug in Epplet_change_config (same one Epplet_modify_config used to have).

-------------------------------------------------------------------------------

Fri Nov 12 13:17:34 EST 1999
(StriderZ)

Changed epplets/E-Exec.c

Added Epplet_unremember to cb_close.

-------------------------------------------------------------------------------

Fri Nov 12 13:41:29 EST 1999
(StriderZ)

Added a feature to allow you to scroll off the end of the command history and 
back into a blank textbox. Was supposed to already be in, but for some reason 
it didn't work.

-------------------------------------------------------------------------------

Fri Nov 12 13:55:48 EST 1999
(StriderZ)

Gee..wonder how many more commits I can get before 14:00...
Fixed a segfault bug in E-Exec.

-------------------------------------------------------------------------------

Fri Nov 12 19:14:21 GMT 1999
(gilbertt)

Changes to E-SD.[ch]

I'm hoping to have fixed the occasional high cpu usage my epplet seems to
show for everyone except me...

Please let me know if it worked...

-------------------------------------------------------------------------------

Fri Nov 12 19:14:21 GMT 1999
(gilbertt)

More E-SD.c changes. Should be better, but let me know if any lag occurs.

-------------------------------------------------------------------------------

Fri Nov 12 12:35:49 PST 1999
(KainX)

Cleaning up the epplets is becoming a morning routine for me.... =P

-------------------------------------------------------------------------------

Fri Nov 12 15:37:46 PST 1999
(KainX)

Some UI changes to make E-Exec a little more friendly. :-)