@@ -521,3 +521,10 @@ Fri Nov 12 15:37:46 PST 1999
 (KainX)
 
 Some UI changes to make E-Exec a little more friendly. :-)
+
+-------------------------------------------------------------------------------
+
+Fri Nov 12 15:57:40 PST 1999
+(KainX)
+
+Wrap-around history.
